@@ -3,6 +3,9 @@
 This file documents user visible changes between versions of StumpWM
 
 * Changes since 0.9.3
+** new %interactivep% variable
+see defcommand in the manual.
+
 ** The default package is now stumpwm-user
 stumpwm-user imports all exported stumpwm symbols.
 
